--- a/gb/nf3046_8.md
+++ b/gb/nf3046_8.md
@@ -8,6 +8,9 @@
 
 单页尺寸点击下载a4-163......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月13日 5:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/4/8/n11171176.md#1" target="_blank">台湾国父纪念馆景点上 大陆人的“指路灯”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/4/8/n11171176.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/2019-4-6-mh-taiwan-jingdian-04-150x120.jpg" align ="left"></a>在台北国父纪念馆的忠孝东路大门边的人行道上，一位五十多岁的女士焦急地东张西望，汗珠顺着她的两颊流下来。她抬眼看到法轮功真相展板，忽然想起导游说过的话：“你们如果迷路的话，就来找法轮功（学员）问路，就会知道怎么走，他们会帮助你们。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月09日 9:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/5/6/n11236473.md#1" target="_blank">参考资料：纵观天下（2019年5月传单/传真）</a><br></h3>回顾历史 忆四﹒二五和平上访 纽约游行集会纪念四﹒二五 华人感佩 三退声明 知名发型师的精神法宝 由孩子被抢 看道德败坏的恶果 江泽民从内部打倒了中共......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月06日 11:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/5/4/n11234536.md#1" target="_blank">每日三退声明精选（2019/05/04）</a><br></h3>基督教徒申请加入团、党，需得承诺不再参与集会，所以我只是小学强制的少先队员。当政府要拆除教堂的十字架，我们以为只是一步退，没想到是步步退。现在教堂开始安装摄像头，不允许讲灵魂复活，还安插政府官员常驻……。打压正统宗教信仰后，发展共党邪教才是这个国家的本质。为了自身不变的信仰和自由，我在此宣布，退出少先队，不再是党内任何一个组织的成员！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月05日 6:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/5/4/n11233167.md#1" target="_blank">每日三退声明精选（2019/05/03）</a><br></h3>我是一名大学生，从小到大受共产党的洗脑教育。也感觉社会越来越不对劲，如：老人倒地没人敢扶，老师侵害学生，医患纠纷等等不一而足。但不知道问题出在哪里？今天有幸听到了共产党的真相。原来中共才是祸害中国的祸根，它就是个西来的邪灵。自从它篡政以来就不断搞运动迫害中国人的精英，把中国的传统文化当成所谓“封资修”批判，篡改中国的历史，侮辱中国的圣人祖先，孔子被批判，民族.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月04日 11:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/5/2/n11228161.md#1" target="_blank">每日三退声明精选（2019/05/01）</a><br></h3>文化大革命中，我的家庭被迫害下放农村，但是天无绝人之路，因为祖传医术受到村民喜欢，找到生活下去的路。文革中因为年轻看不懂好坏，我参加了红卫兵，现在看也是不好的选择。平反后回到城里，开了诊所，还被黑社会骚扰。共产党比黑社会还甚，还是趁早远离它们，退出以前入过的邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月02日 11:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/5/1/n11225637.md#1" target="_blank">每日三退声明精选（2019/04/29）</a><br></h3>我是中科院的，有绿卡，在美国住了六年，我的儿女都在美国，我每天都看《大纪元时报》，朋友告诉我说这里有水分，我说我有自己的头脑，我对这个共产邪党太了解了，它现在坏的实在是不行了，反右、文化大革命……都是它干的。这不前两天我们老朋友聚会，说什么上边又传达下来了，现在要“封住嘴”，我对《法轮功》的功理和功法都有很多很多的了解，我用李福寿这个名字退出团组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月30日 11:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/4/29/n11220835.md#1" target="_blank">每日三退声明精选（2019/04/28）</a><br></h3>被共产党欺骗六十多年，它说的是为天下人谋幸福，全心全意为人民服务，实则是极端的自私、贪婪，大量的高官把自己的子女移民到经济发达国家，没有雄厚的资金谁能办得到，我们靠自己的体力在国内生活，辛辛苦苦劳作都很难维持现在的高物价、昂贵的医疗费、天价的房产，都是共产党的专制制度，独裁统治，败坏的社会风气，造成的国不像国，民不聊生，我现在终于明白了，共产党是真正的邪教.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月29日 11:36 AM							</td></tr>
@@ -32,8 +35,5 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/4/4/n11161674.md#1" target="_blank">每日三退声明精选（2019/04/03）</a><br></h3>本人自愿退出曾经参加过的少先队、共青团组织。是因为长期以来深刻了解这些组织是洗脑用的，直接与中华民族的文化传统相背，作为共产党的组织，不是为人民的，所以，我要跟他们划清界限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月04日 10:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/4/3/n11159034.md#1" target="_blank">每日三退声明精选（2019/04/02）</a><br></h3>我从幼年被我因畏惧封杀的记忆里找到追求多年的真理，看清了党邪恶的本质，我不知道怎么表达我居然戴了多年红领巾，为了这个红领巾和父母绝交的心情。感谢大纪元告诉我真相，我以后与邪党绝无关系。历史书上对于邪党所做事的掩盖和“骗”简直昭然若揭，我相信宇宙有其道，邪党定不长久。《九评》评说真理，邪党无处遁形。我只是初中生，但我甚至不敢在班级学生谩骂国民党的时候喊一句冤.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月03日 11:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/4/2/n11156698.md#1" target="_blank">每日三退声明精选（2019/04/01）</a><br></h3>我曾经是中共体制内一名地方上层领导干部，早已看清了中共整体彻底腐败，官员集体堕落，到处危害民众，中共除了干坏事什么都不行了，没有任何光明前途可言。我认同法轮大法好！真善忍好！现在郑重声明：退出曾加入的中共党团队组织，从此断绝与中共的一切关系，堂堂正正做人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月02日 11:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/4/1/n11154158.md#1" target="_blank">每日三退声明精选（2019/03/31）</a><br></h3>曾经引以为豪的党、团、队组织，现在看来是多么的可耻，自诩“伟、光、正”的党竟然是以谎言立国，以杀人维持统治的流氓邪教。中共的打黑除恶也是骗人的幌子，真正的和最大的恶棍流氓、坏人黑老大全部都在中共体制内。中共才是真正的黑恶势力的龙头老大，社会上的犯罪团伙明里暗里几乎都拜在中共的麾下。邪党统治下，贪腐前赴后继，民不聊生，口袋有点钱吧都让房子弄去了，前几年股票骗.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年04月01日 10:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/3/31/n11152285.md#1" target="_blank">每日三退声明精选（2019/03/30）</a><br></h3>单位总把党、政治排在第一位，很烦人，我还被安排做党政方面的工作，知道都是违心、欺骗的所为，今天了解真相，了解恶党的邪恶本质，退出曾经加入的党、团、队，心安。不再做助纣为虐的害人的事情了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月31日 11:51 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/3/29/n11149495.md#1" target="_blank">每日三退声明精选（2019/03/29）</a><br></h3>我是一名大学生，从小受中共义务教育的洗脑，不明共产党的邪恶本质，加入了少先队和共青团。后来，我通过各种资讯管道看到了中共的卑鄙。人民合法维权却被政府暴力镇压，侵犯人民上访、游行的自由；删除大量网上批评政府的内容，侵犯人民的言论自由；假冒伪劣横行，政府包庇不作为，侵犯广大消费者的权益；官官相互，犯法官员得不到惩治，依法治国仍是空；搜刮民脂民膏，广大劳动人民生活.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月30日 12:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_7.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;8&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_9.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_8.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_8.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/nf3046_8.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_8.htm">http://www.epochtimes.com/gb/nf3046_8.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
